# Stick

./: .gitignore  CMakeLists.txt  README.md  test.stk
include/interpreter/: context.hpp  interpreter.hpp
include/lexer/: lexer.hpp
include/lexer/operations/: operations.hpp  optrie.hpp
include/lexer/types/: token.hpp
include/parser/: parser.hpp
include/parser/types/: opcall.hpp
include/util/: databuilder.hpp
src/: CMakeLists.txt  stick.cpp
src/interpreter/: CMakeLists.txt  interpreter.cpp
src/lexer/: CMakeLists.txt  lexer.cpp
src/lexer/operations/: CMakeLists.txt  optrie.cpp
src/parser/: CMakeLists.txt  parser.cpp
