
CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
SET(PROJECT_NAME Stick)
PROJECT(${PROJECT_NAME})

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED TRUE)

SET(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
SET(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

add_executable(
  ${PROJECT_NAME}
  ${SRC_DIR}/stick.cpp
)

add_subdirectory(
  ${SRC_DIR}
)

target_include_directories(
  ${PROJECT_NAME}
  PUBLIC
  ${INCLUDE_DIR}
)